--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
 
     <div class="logo__wrapper">
 
+      <a class="fullScreen" id="back"><svg id="back" class="login__svg" xmlns="http://www.w3.org/2000/svg" width="25"
+          height="25" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
+          stroke-linejoin="round">
+          <circle cx="12" cy="12" r="10"></circle>
+          <polyline points="12 8 8 12 12 16"></polyline>
+          <line x1="16" y1="12" x2="8" y2="12"></line>
+        </svg>
+      </a>
+
+      <a class="fullScreen" id="fullScreen"><svg id="fullScreen" class="login__svg" xmlns="http://www.w3.org/2000/svg"
+          width="25" height="25" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5"
+          stroke-linecap="round" stroke-linejoin="round">
+          <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3">
+          </path>
+        </svg>
+      </a>
+
       <a class="logo" id="logo" href="#main">
         <span class="logo__first">GYM</span>
         <span class="logo__second">PRO</span>
@@ -29,7 +46,7 @@
 
 
       <a class="login"><span class="login__word" id="login__word">Sign In</span>
-        <svg class="login__svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+        <svg class="login__svg" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"
           fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
           <circle cx="12" cy="7" r="4.5"></circle>
