--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="logo__wrapper">
 
-      <a class="fullScreen" id="back"><svg id="back" class="login__svg" xmlns="http://www.w3.org/2000/svg" width="25"
+      <a class="fullScreen" id="back"><svg id="back" class="login__svg2" xmlns="http://www.w3.org/2000/svg" width="25"
           height="25" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
           stroke-linejoin="round">
           <circle cx="12" cy="12" r="10"></circle>
@@ -30,7 +30,7 @@
         </svg>
       </a>
 
-      <a class="fullScreen" id="fullScreen"><svg id="fullScreen" class="login__svg" xmlns="http://www.w3.org/2000/svg"
+      <a class="fullScreen" id="fullScreen"><svg id="fullScreen" class="login__svg2" xmlns="http://www.w3.org/2000/svg"
           width="25" height="25" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5"
           stroke-linecap="round" stroke-linejoin="round">
           <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3">
