--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <div class="logo__wrapper">
 
-      <a class="fullScreen" id="back"><svg id="back" class="login__svg2" xmlns="http://www.w3.org/2000/svg" width="25"
+      <div class="fullScreen" id="back"><svg class="login__svg2" xmlns="http://www.w3.org/2000/svg" width="25"
           height="25" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-          stroke-linejoin="round">
+          stroke-linejoin="round" id="back">
           <circle cx="12" cy="12" r="10"></circle>
           <polyline points="12 8 8 12 12 16"></polyline>
           <line x1="16" y1="12" x2="8" y2="12"></line>
         </svg>
-      </a>
+      </div>
 
       <a class="fullScreen" id="fullScreen"><svg id="fullScreen" class="login__svg2" xmlns="http://www.w3.org/2000/svg"
           width="25" height="25" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5"
